@@ -194,6 +194,8 @@ Bug fixes
 
 Test Framework
 
+* LUCENE-5592: Incorrectly reported uncloseable files. (Dawid Weiss)
+
 * LUCENE-5577: Temporary folder and file management (and cleanup facilities)
   (Mark Miller, Uwe Schindler, Dawid Weiss)
 
